Bugfix: dialog/select layout broken in Safari

--- a/dev/Styles/Main.less
+++ b/dev/Styles/Main.less
@@ -69,6 +69,7 @@ dialog {
 	max-width: 560px;
 	overflow: auto;
 	padding: 0;
+	position: sticky;
 	transition: all .2s ease-out;
 	top: 0;
 	width: calc(100% - 20px);
