--- a/dev/Styles/User/Compose.less
+++ b/dev/Styles/User/Compose.less
@@ -1,8 +1,6 @@
 
 #V-PopupsCompose {
-	display: flex;
-	flex-direction: column;
-	height: calc(100% - 52px);
+	height: calc(100vh - 52px);
 	max-width: 1000px;
 	width: 98%;
 
